fix: centering button on mobile

--- a/src/pages/Home/Home-media.scss
+++ b/src/pages/Home/Home-media.scss
@@ -97,8 +97,8 @@
       }
     }
 
-    .button-group {
-      padding-right: 20%;
+    .button-group a{
+      margin: 0 auto;
     }
   }
 }
